# statuspageio

./: .editorconfig  .envrc  .gitignore  README.md  pyproject.toml
statuspageio/: client.py  config.py  errors.py  http_client.py
statuspageio/services/: component.py  metric.py  page.py
